--- a/client/package.json
+++ b/client/package.json
@@ -6,14 +6,14 @@
     "classnames": "^2.2.5",
     "history": "^4.7.2",
     "humps": "^2.0.1",
-    "material-ui": "^1.0.0-beta.16",
+    "material-ui": "^1.0.0-beta.30",
     "material-ui-icons": "^1.0.0-beta.17",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-keypress": "^0.1.5",
     "react-redux": "^5.0.6",
-    "react-router-redux": "^4.0.8",
+    "react-router-redux": "next",
     "react-scripts": "1.1.0",
     "redux": "^3.7.2",
     "redux-saga": "^0.16.0"
