Show google map on screen

--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/googlemaps": "^3.30.5",
+    "@types/markerclustererplus": "^2.1.33",
     "classnames": "^2.2.5",
     "history": "^4.7.2",
     "humps": "^2.0.1",
@@ -11,6 +13,7 @@
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-google-maps": "^9.4.5",
     "react-keypress": "^0.1.5",
     "react-redux": "^5.0.6",
     "react-router-redux": "next",
