--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
   },
   "dependencies": {
     "body-parser": "~1.18.2",
+    "config": "^1.29.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.15.5",
     "jade": "~1.11.0",
     "morgan": "~1.9.0",
+    "pg": "^7.4.1",
     "serve-favicon": "~2.4.5"
   },
   "devDependencies": {
@@ -20,6 +22,7 @@
     "@types/supertest": "^2.0.4",
     "babel-eslint": "^8.2.1",
     "babel-preset-env": "^1.6.1",
+    "csv-parse": "^2.0.0",
     "eslint": "^4.16.0",
     "eslint-config-react-app": "^2.1.0",
     "eslint-config-standard": "^11.0.0-beta.0",
@@ -31,6 +34,7 @@
     "eslint-plugin-react": "^7.5.1",
     "eslint-plugin-standard": "^3.0.1",
     "jest": "^22.1.4",
+    "node-pg-migrate": "^2.17.0",
     "nodemon": "^1.14.11",
     "stylelint": "^8.4.0",
     "stylelint-config-standard": "^18.0.0",
