--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "test": "node_modules/.bin/jest --watch"
   },
   "dependencies": {
+    "axios": "^0.17.1",
     "body-parser": "~1.18.2",
     "config": "^1.29.2",
     "cookie-parser": "~1.4.3",
+    "csv-parser": "^1.12.0",
     "debug": "~2.6.9",
     "express": "~4.15.5",
     "jade": "~1.11.0",
