--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react-router-redux": "next",
     "react-scripts": "1.1.0",
     "redux": "^3.7.2",
+    "redux-actions": "^2.2.1",
     "redux-saga": "^0.16.0"
   },
   "scripts": {
