--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "migrate-all-latest": "NODE_ENV=test knex migrate:latest && knex migrate:latest",
     "migrate-all-redo": "npm run migrate-all-rollback && npm run migrate-all-latest",
     "heroku-postbuild": "node_modules/.bin/knex migrate:latest && cd client/ && npm install && npm run build",
-    "heroku-update-prod-env-vars": "sed 's/#[^(\"|'')]*$//;s/^#.*$//' .env.production | xargs heroku config:set --app=shnoodo"
+    "heroku-update-prod-env-vars": "sed 's/#[^(\"|'')]*$//;s/^#.*$//' .env.production | xargs heroku config:set --app=give-my-stuff"
   },
   "dependencies": {
     "axios": "^0.17.1",
