Add github and give my stuff logos

--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-github-corner": "^2.1.0",
     "react-google-maps": "^9.4.5",
     "react-keypress": "^0.1.5",
     "react-redux": "^5.0.6",
