--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "cookie-parser": "~1.4.4",
     "debug": "~4.1.1",
     "express": "~4.17.1",
+    "express-graphql": "^0.9.0",
+    "graphql": "^14.6.0",
     "knex": "^0.20.12",
     "morgan": "~1.9.1",
     "objection": "^2.1.3",
+    "objection-graphql": "^0.4.5",
     "pg": "^7.4.1",
     "serve-favicon": "~2.5.0"
   },
